Renamed variables and changed (new integer) to (valueOf).